# remove-refusals-with-transformers

./: .gitignore  ablated_inference.py  compute_refusal_dir.py  inference.py  model.py  original_inference.py  pyproject.toml
