[project]
name = "remove-refusals-with-transformers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.2",
    "einops>=0.8.2",
    "ipykernel>=7.2.0",
    "jaxtyping>=0.3.9",
    "rich>=14.3.3",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformers>=5.3.0",
    "yapf>=0.43.0",
]
